<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="random.android.minesweeper.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:text="@string/bottomtext"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottomtext2"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRestart"
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/restart"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnFlag"
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/flag"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnReveal"
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/reveal"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <random.android.minesweeper.view.MinesweeperView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="18dp"
        android:background="@color/buttonColor" />

</LinearLayout>
